concord-cli, concord-server, concord-agent: ability to run Concord on Java 16 (#429)